@@ -68,7 +68,6 @@ protected:
 	afx_msg void OnBnClickedBrowse();
 	afx_msg void OnBnClickedHelp();
 	afx_msg void OnCbnSelchangeOldlogs();
-	afx_msg void OnCbnCloseupOldlogs();
 	DECLARE_MESSAGE_MAP()
 
 public:
